--- a/index.html
+++ b/index.html
@@ -2,19 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>chessBoard</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="mainChessBoard">
+    <div id="chessBoard">
     </div>
-    <script>
-        for (var i=0; i< 64; i++){
-    document
-    .getElementById("mainChessBoard")
-    .appendChild(document.createElement("div"))
-    .style.backgroundColor = parseInt((i / 8) + i) % 2 == 0 ? '#ababab' : 'white';    
-    }
-    </script>
+     <script src="script.js"></script>
 </body>
 </html>
