--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <div id="chessBoard">
     </div>
+     <div class="line">
+     </div>
      <script src="script.js"></script>
+     <br>
 </body>
 </html>
